--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
     "passport": "^0.6.0",
@@ -32,9 +33,11 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.16",
+    "@types/express-session": "^1.17.5",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.18",
     "@types/passport": "^1.0.11",
+    "@types/passport-google-oauth2": "^0.1.5",
     "@types/passport-local": "^1.0.35",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
